--- a/index/02-chap2.Rmd
+++ b/index/02-chap2.Rmd
@@ -29,8 +29,7 @@ editor_options:
 ```{r, echo=FALSE, message=FALSE}
 source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/packages.R")
 ```
-# Background {#background}
-This chapter will give a more extensive introduction to the themes covered within the results chapters. It will set out where the current gaps are in the literature and provide an overview of the aims and hypotheses of the thesis.
+# Introduction {#background}
 
 ## The history of body mass index
 Although body fatness (adiposity) has long been associated with adverse health, the use of the term body mass index (BMI), is relatively recent. BMI is thought to have been first defined in 1972 by Ancel Keys[@Blackburn2014]. This term was given to define the ratio of weight in kilograms over the square of the height in metres. This measure was found to reflect overall body fatness well, while being easy and cheap to measure. The World Health Organization first defined the BMI categories in 1995[@WHO1995] used today: the National Health Service (NHS) defines a body mass index (BMI) of 25 kg/m^2^ as having overweight and 30 kg/m^2^ or higher as having obesity. These bounds were chosen based on associations with mortality. The average BMI of the UK adult population is ~27kg/m^2^[@Wade2018], which is in the 'overweight' category. Overweight is also more common than 'normal-weight' in many other higher-income countries[@NCD-RisC2016], and prevalence of overweight is increasing in lower-income countries[@Templin2019]. It is currently estimated that 40% of adults in the United States and 26% of adults in the United Kingdom have obesity[@Bluher2019]. As of 2016, the number of individuals globally with obesity surpassed 650 million[@TheLancetPublicHealth2018]. 
@@ -39,16 +38,16 @@ Although body fatness (adiposity) has long been associated with adverse health, 
 Diseases affecting the heart and blood vessels are the major cause of mortality in many countries[@BritishHeartFoundation2021]. In 2019, global deaths from coronary heart disease (CHD) and stroke amounted to ~9 million and ~6.5 million deaths, respectively[@BritishHeartFoundation2021]. Current known risk factors for such diseases include smoking, physical inactivity, poor diet and high cholesterol[@Virani2021]. Overweight and obesity are also well established risk factors for such diseases and are now considered the leading years lived with disability and injury risk factors in the United States[@Virani2021]. Various studies have found a link between adiposity and cardiovascular risk through various study designs. For example, large observational studies have found that adults with overweight or obesity have a higher risk of cardiovascular events and death from cardiovascular disease[@Khan2018]. Another study found that an average increase in BMI of 4 kg/m^2^ across a population increased the odds of ischaemic heart disease by 20-30%[@Nordestgaard2012]. 
 
 ## Mendelian randomisation can be used to explore causality
-Risk factors have often been identified through observational associations. Observational studies are often limited by bias, confounding and reverse causation[@Davies2018]. Mendelian randomisation (MR) is a technique which exploits the random assortment of alleles to estimate the causal association between a modifiable risk factor and disease outcomes. It can be likened to a natural randomised control trial (RCT)[@Gill2020]. This technique is widely implemented due to the availability of genetic data in large cohorts, such as in ~500,000 UK Biobank participants[@Bycroft2018]. An example of how MR and RCTs can be used to determine causality is shown in Figure \@ref(fig:MR-statins), using low density lipoproteins-cholesterol (LDL-C) and cardiovascular events as an example[@Bennett2017]. Here, single nucleotide polymorphisms (SNPs) that are associated with levels of LDL-C can be used. These SNPs should also not be associated with other confounding factors such as smoking. If people with SNPs which are associated with lower LDL-C also have lower rates of cardiovascular events, it is likely that the relationship between LDL-C and cardiovascular events is causal. Although a useful technique in exploring causality, MR has its own biases and limitations, therefore other lines of evidence and study designs such as RCTs are required.
+Risk factors have often been identified through observational associations. Observational studies are often limited by bias, confounding and reverse causation[@Davies2018]. Mendelian randomisation (MR) is a technique which exploits the random assortment of alleles to estimate the causal association between a modifiable risk factor and disease outcomes. It can be likened to a natural randomised control trial (RCT)[@Gill2020]. This technique is widely implemented due to the availability of genetic data in large cohorts, such as in ~500,000 UK Biobank participants[@Bycroft2018]. An example of how MR and RCTs can be used to determine causality is shown in Figure \@ref(fig:MR-CVevent), using BMI and cardiovascular events as an example[@Doney2009]. Here, genotypes that are associated with BMI can be used. These genotypes should only be associated with BMI and not other confounding factors. If people with genotypes which are associated with higher BMI also have higher rates of cardiovascular events, it is likely that the relationship between BMI and cardiovascular events is causal. Although a useful technique in exploring causality, MR has its own biases and limitations, therefore other lines of evidence and study designs such as RCTs are required. In an RCT, if a weight loss intervention reduces BMI compared to the control group, and also reduces the rate of cardiovascular events, this also supports a causal role of BMI in the onset of cardiovascular events.
 
-(ref:scaption-MR-statins) Mendelian randomisation example using LDL levels and cardiovascular events
-(ref:caption-MR-statins) **Example of how Mendelian randomisation and a randomised control trial can be used to determine whether lowering levels of low density lipoproteins can decrease risk of cardiovascular events**. Figure from Bennett et al.[@Bennett2017].
-```{r MR-statins, echo = FALSE, fig.cap="(ref:caption-MR-statins)", fig.scap="(ref:scaption-MR-statins)"}
-include_graphics(path = "figure/Intro_background/MR_statin_example.jpg", dpi = NA)
+(ref:scaption-MR-CVevent) Mendelian randomisation and randomised control trial example using body mass index and cardiovascular events
+(ref:caption-MR-CVevent) **Example of how Mendelian randomisation and a randomised control trial can be used to determine whether higher BMI increases the risk of cardiovascular events**. Figure made using BioRender.com.
+```{r MR-CVevent, echo = FALSE, fig.cap="(ref:caption-MR-CVevent)", fig.scap="(ref:scaption-MR-CVevent)"}
+include_graphics(path = "figure/Intro_background/BMI_MR_RCT_CVevent.png", dpi = NA)
 ```
 
 ## The genetics of obesity
-Mendelian randomization can therefore also be used to estimate the causal relationship of BMI on various outcomes. There are strong correlations between BMI and more direct measures of fat mass measured by dual-energy X-ray absorptiometry (DXA)[@Bell2018], such as total fat mass index and regional fat mass indices. Due to the specialised equipment needed for fat mass measures, BMI is often much more widely available within cohort studies, trials and in the clinic. Environmental factors are well known to explain a large amount of variance in BMI, but genetic variants also influence BMI. Monogenic obesity was first identified where mutations in the ob (leptin) gene[@Zhang1994] lead to mice having obesity. The first genome-wide association study (GWAS) for obesity traits was performed in 2007 for around 5,000 individuals[@Scuteri2007], which found evidence that 10 SNPs were associated with BMI. Since then, GWAS have been performed in increasingly larger cohort sizes[@Locke2015], with the largest and most recent GWAS performed in 2018 by Yengo et al.[@Yengo2018]. This GWAS found 941 near-independent genetic variants which associate with BMI. These have been shown to explain around 6% of the variance in BMI. Of these SNPs, 656 are considered as primary associations[@Yengo2018].
+As indicated above, Mendelian randomization can be used to estimate the causal relationship of BMI on various outcomes. There are strong correlations between BMI and more direct measures of fat mass measured by dual-energy X-ray absorptiometry (DXA)[@Bell2018], such as total fat mass index and regional fat mass indices. Due to the specialised equipment needed for fat mass measures, BMI is often much more widely available within cohort studies, trials and in the clinic. Environmental factors are well known to explain a large amount of variance in BMI, but genetic variants also influence BMI. Monogenic obesity was first identified where mutations in the ob (leptin) gene[@Zhang1994] lead to mice having obesity. This was later discovered to be because leptin was secreted by adipose tissue and was found to influence food consumption[@Friedman1998]. The first genome-wide association study (GWAS) for obesity traits was performed in 2007 for around 5,000 individuals[@Scuteri2007], which found evidence that 10 SNPs were associated with BMI. Since then, GWAS have been performed in increasingly larger cohort sizes[@Locke2015], with the largest and most recent GWAS performed in 2018 by Yengo et al.[@Yengo2018]. This GWAS found 941 near-independent genetic variants which associate with BMI. These have been shown to explain around 6% of the variance in BMI. Of these SNPs, 656 are considered as primary associations[@Yengo2018].
 
 ## Types of cardiovascular disease
 As indicated in section \@ref(CVD-stats), CHD and stroke affect millions of people worldwide every year. Cardiovascular disease is used as a term to describe the group of diseases which affect the heart or blood vessels. Within cardiovascular disease there are various diseases which range in their clinical presentation and pathology. CHD (also known as coronary artery disease (CAD) or ischaemic heart disease (IHD)) is caused by a build up of plaques in the arteries (atherosclerosis). These build ups can lead to blockages in the arteries (arterial thrombosis), thereby causing a heart attack. Other types of cardiovascular disease include stroke, which can be either ischaemic (another form of arterial thrombosis) or haemorrhagic. Thrombi can also form in veins (venous thromboembolism/VTE), thereby causing deep venous thrombosis (DVT) when the thrombus is in the legs or pulmonary embolism when it is in the lungs. Arterial and venous thrombi both are composed of platelets, however arterial thrombosis has a much higher proportion (31%)[@Chernysh2020]. Although not one of the main components of venous thrombi, platelets are still involved in the pathology[@Koupenova2017a].
